adapt status to user authentication and krakend
