# status/api-definition/openapi.yaml
@@ -8,6 +8,27 @@ servers:
 tags:
   - name: statuses
 paths:
+  /users/{userId}/statuses:
+    get:
+      tags:
+        - statuses
+      summary: get all statuses of a user
+      operationId: getStatuses
+      parameters:
+        - name: userId
+          in: path
+          description: uuid of user
+          required: true
+          schema:
+            type: string
+            format: uuid
+      responses:
+        '200':
+          description: successful operation
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/StatusesResponse'
   /statuses:
     post:
       tags:
@@ -20,6 +41,13 @@ paths:
             schema:
               $ref: '#/components/schemas/CreateStatusRequest'
         required: true
+      parameters:
+        - in: header
+          name: X-user
+          schema:
+            type: string
+            format: uuid
+          required: true
       responses:
         '201':
           description: successfully created
@@ -27,20 +55,7 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/StatusResponse'
-    get:
-      tags:
-        - statuses
-      summary: get all statuses of a user
-      operationId: getStatuses
-      responses:
-        '200':
-          description: successful operation
-          content:
-            application/json:
-              schema:
-                type: array
-                items:
-                  $ref: '#/components/schemas/StatusResponse'
+
   /statuses/{statusId}:
     get:
       tags:
@@ -102,12 +117,16 @@ components:
       type: object
       required:
         - content
-        - userId
       properties:
         content:
           type: string
           example: status content
-        userId:
-          type: string
-          format: uuid
-          example: user which creates the status
+    StatusesResponse:
+      type: object
+      required:
+        - statuses
+      properties:
+        statuses:
+          type: array
+          items:
+            $ref: '#/components/schemas/StatusResponse'
