# status/internal/api.go
@@ -2,7 +2,7 @@ package statuses
 
 import (
 	"errors"
-	"fmt"
+	openapi_types "github.com/deepmap/oapi-codegen/pkg/types"
 	"github.com/go-chi/chi/v5"
 	"github.com/go-chi/render"
 	"github.com/google/uuid"
@@ -15,11 +15,11 @@ type Api struct {
 	service statuses.Service
 }
 
-func StatusFromCreateStatusRequest(request statuses.CreateStatusRequest) statuses.Status {
+func StatusFromCreateStatusRequest(request statuses.CreateStatusRequest, userId uuid.UUID) statuses.Status {
 	return statuses.Status{
 		Id:      uuid.New(),
 		Content: request.Content,
-		UserId:  request.UserId,
+		UserId:  userId,
 	}
 }
 
@@ -27,26 +27,39 @@ func NewStatusApi(service statuses.Service) *Api {
 	return &Api{service: service}
 }
 
-func (api *Api) ConfigureRouter(router chi.Router, middlewares ...func(http.Handler) http.Handler) {
-	var middlewareFuncs []statuses.MiddlewareFunc
-	for _, middleware := range middlewares {
-		middlewareFuncs = append(middlewareFuncs, middleware)
-	}
-
+func (api *Api) ConfigureRouter(router chi.Router) {
 	handler := statuses.HandlerWithOptions(api,
 		statuses.ChiServerOptions{
 			ErrorHandlerFunc: func(w http.ResponseWriter, r *http.Request, err error) {
 				internal.ReplyWithError(w, r, err, http.StatusBadRequest)
 			},
-			Middlewares: middlewareFuncs,
 		})
 
 	router.Mount("/", handler)
 }
 
-func (api *Api) GetStatuses(w http.ResponseWriter, r *http.Request) {
+func (api *Api) CreateStatus(w http.ResponseWriter, r *http.Request, params statuses.CreateStatusParams) {
 	service := api.service
-	allStatuses, err := service.GetStatuses()
+	var createStatusRequest statuses.CreateStatusRequest
+	err := render.Decode(r, &createStatusRequest)
+	if err != nil {
+		internal.ReplyWithError(w, r, err, http.StatusBadRequest)
+		return
+	}
+
+	status := StatusFromCreateStatusRequest(createStatusRequest, params.XUser)
+	status, err = service.CreateStatus(status)
+	if err != nil {
+		internal.ReplyWithError(w, r, err, http.StatusInternalServerError)
+		return
+	}
+
+	internal.ReplyWithStatusWithJSON(w, r, http.StatusCreated, statuses.StatusResponseFromStatus(status))
+}
+
+func (api *Api) GetStatuses(w http.ResponseWriter, r *http.Request, userId openapi_types.UUID) {
+	service := api.service
+	allStatuses, err := service.GetStatuses(userId)
 	if err != nil {
 		internal.ReplyWithError(w, r, err, http.StatusInternalServerError)
 		return
@@ -57,26 +70,7 @@ func (api *Api) GetStatuses(w http.ResponseWriter, r *http.Request) {
 		statusResponses[i] = statuses.StatusResponseFromStatus(status)
 	}
 
-	internal.ReplyWithStatusOkWithJSON(w, r, statusResponses)
-}
-
-func (api *Api) CreateStatus(w http.ResponseWriter, r *http.Request) {
-	service := api.service
-	var createStatusRequest statuses.CreateStatusRequest
-	err := render.Decode(r, &createStatusRequest)
-	if err != nil {
-		internal.ReplyWithError(w, r, err, http.StatusBadRequest)
-		return
-	}
-
-	status := StatusFromCreateStatusRequest(createStatusRequest)
-	status, err = service.CreateStatus(status)
-	if err != nil {
-		internal.ReplyWithError(w, r, err, http.StatusInternalServerError)
-		return
-	}
-
-	internal.ReplyWithStatusWithJSON(w, r, http.StatusCreated, statuses.StatusResponseFromStatus(status))
+	internal.ReplyWithStatusOkWithJSON(w, r, statuses.StatusesResponse{Statuses: statusResponses})
 }
 
 func (api *Api) DeleteStatus(w http.ResponseWriter, r *http.Request, statusId uuid.UUID) {
@@ -94,10 +88,6 @@ func (api *Api) DeleteStatus(w http.ResponseWriter, r *http.Request, statusId uu
 }
 
 func (api *Api) GetStatus(w http.ResponseWriter, r *http.Request, statusId uuid.UUID) {
-	userId := r.Context().Value("userId")
-
-	fmt.Println("HERE")
-	fmt.Println(userId)
 	status, err := api.service.GetStatus(statusId)
 	if err != nil {
 		if errors.Is(err, internal.NotFoundError(statusId)) {
